# syncbox

./: .syncbox.json  Cargo.toml  Makefile  README.md  backup.rs
.github/workflows/: build.yml  release.yml  rust.yml
Formula/: syncbox.rb
src/: checksum_tree.rs  lib.rs  main.rs  progress.rs  reconciler.rs  transport.rs
src/transport/: dry.rs  ftp.rs  local.rs  mod.rs  s3.rs  sftp.rs
tmp/tmp2/: nazdar.txt
