[package]
name = "syncbox"
version = "0.1.0"
edition = "2021"
authors = ["Roman Schejbal <schejbalroman@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
clap = { version = "4.0.14", features = ["derive"] }
console = "0.15.2"
env_logger = "0.9.1"
futures = "0.3.24"
ignore = "0.4.18"
indicatif = "0.17.1"
log = "0.4.17"
num_cpus = "1.13.1"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sha256 = "1.0.3"
suppaftp = { version = "4.5.2", features = ["async-native-tls"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
