[package]
authors = ["Roman Schejbal <schejbalroman@gmail.com>"]
edition = "2021"
name = "syncbox"
version = "0.5.0"

[dependencies]
async-trait = "0.1.74"
clap = {version = "4.4.10", features = ["derive", "env"]}
console = "0.15.7"
dotenvy = "0.15.7"
flate2 = "1.0.28"
futures = "0.3.29"
ignore = "0.4.21"
indicatif = "0.17.7"
log = "0.4.20"
num_cpus = "1.16.0"
rand = "0.8.5"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_s3 = "0.48.0"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
sha256 = "1.4.0"
suppaftp = {version = "5.2.2", features = ["async-native-tls"]}
tokio = {version = "1.34.0", features = ["full"]}
tokio-util = {version = "0.7.10", features = ["compat"]}
